# rust-system-design

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-CC-BY-SA-4.0.md  LICENSE-MIT  LICENSE.md  README.md  ROADMAP.md  course.manifest.json
.github/: pull_request_template.md
benches/: airbnb_search_booking_baseline.rs  booking_engine_hold_baseline.rs  dropbox_upload_baseline.rs  google_docs_operations_baseline.rs  kafka_publish_fetch_baseline.rs  netflix_playback_baseline.rs  redis_hot_path_baseline.rs  tiny_url_baseline.rs  twitter_timeline_baseline.rs  uber_matching_baseline.rs
diagrams/: airbnb-failures.mmd  airbnb-flow.mmd  booking-engine-failures.mmd  booking-engine-flow.mmd  course-map.mmd  dropbox-failures.mmd  dropbox-flow.mmd  google-docs-failures.mmd  google-docs-flow.mmd  kafka-failures.mmd  kafka-flow.mmd  netflix-failures.mmd  netflix-flow.mmd  redis-failures.mmd  redis-flow.mmd  tinyurl-failures.mmd  tinyurl-flow.mmd  twitter-failures.mmd  twitter-flow.mmd  uber-failures.mmd  uber-flow.mmd
docs/: 00-introduccion.md  01-tinyurl.md  02-twitter.md  03-uber.md  04-netflix.md  05-dropbox.md  06-google-docs.md  07-redis.md  08-kafka.md  09-booking-engine.md  10-airbnb.md  SUMMARY.md  checklist-revision-capitulo.md  flujo-autonomo.md  manifiesto-academy-web.md  mapa-global.md  plantilla-capitulo-proyecto.md  revision-airbnb.md  revision-booking-engine.md  revision-dropbox.md  revision-google-docs.md  revision-kafka.md  revision-netflix.md  revision-redis.md  revision-tinyurl.md  revision-twitter.md  revision-uber.md
examples/: airbnb.rs  booking_engine.rs  (+8 more)
(+22 files in other folders)
