[package]
name = "rust-system-design"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-system-design"
description = "Diseño de sistemas en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_system_design"
path = "src/lib.rs"

[[bench]]
name = "tiny_url_baseline"
harness = false

[[bench]]
name = "twitter_timeline_baseline"
harness = false

[[bench]]
name = "uber_matching_baseline"
harness = false

[[bench]]
name = "netflix_playback_baseline"
harness = false

[[bench]]
name = "dropbox_upload_baseline"
harness = false

[[bench]]
name = "google_docs_operations_baseline"
harness = false

[[bench]]
name = "redis_hot_path_baseline"
harness = false

[[bench]]
name = "kafka_publish_fetch_baseline"
harness = false

[[bench]]
name = "booking_engine_hold_baseline"
harness = false

[[bench]]
name = "airbnb_search_booking_baseline"
harness = false

[dependencies]
